# rdgrep

./: Cargo.toml  README.md
.github/actions/cache_cargo/: action.yml
.github/workflows/: ci.yml  release.yml
src/: main.rs
testdata/ok/: a.rb  b.rb
testdata/ok/hoge/: c.rb
testdata/ruby_files_does_not_exists/: a.txt
